--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
 		"react-native-reanimated": "^3.3.0",
 		"react-native-safe-area-context": "^4.6.3",
 		"react-native-screens": "^3.22.0",
+		"react-native-url-polyfill": "^2.0.0",
 		"react-native-vector-icons": "^9.2.0",
+		"react-query": "^3.35.0",
 		"react-redux": "^8.1.1",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.4.2"
