--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"android": "react-native run-android",
 		"ios": "react-native run-ios",
 		"lint": "eslint .",
-		"start": "react-native start",
+		"start": "watchman watch-del-all && react-native start",
 		"test": "jest",
 		"pods": "cd ios && pod install && cd ../"
 	},
@@ -36,6 +36,7 @@
 		"react": "18.2.0",
 		"react-native": "0.72.0",
 		"react-native-gesture-handler": "^2.12.0",
+		"react-native-input-select": "^1.3.2",
 		"react-native-localize": "^2.2.4",
 		"react-native-reanimated": "^3.3.0",
 		"react-native-safe-area-context": "^4.6.3",
