--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 	"compilerOptions": {
 		"target": "es6",
 		"module": "commonjs",
-		"strict": true,
+		// "strict": true,
 		"jsx": "react",
 		"esModuleInterop": true, 
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
