--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"lodash.memoize": "4.1.2",
 		"lottie-react-native": "^5.1.6",
 		"moment": "^2.29.4",
+		"moment-timezone": "^0.5.43",
 		"nativewind": "^2.0.11",
 		"react": "18.2.0",
 		"react-native": "0.72.0",
